Added non functional to reqs sec and formatting

--- a/docs/Visual Editor Final Report/ve_final_report.tex
+++ b/docs/Visual Editor Final Report/ve_final_report.tex
@@ -30,10 +30,8 @@
 
 
 \section{Project Summary}
-Edith is educational software designed to introduce new computer science students to programming.  New students of any age can learn basic object-oriented programming concepts prior to learning a particular programming language in detail (syntax, data types and structures, etc.).  Edith provides a graphical user interface through which users can create a "script" that animates 2-D characters, or sprites, provided by the program or loaded or created by the user.  The user creates the script by piecing together provided blocks of program structure in a functional way.  Similar programs (e.g., Alice, Scratch) have been shown to increase the interest level and retention of students taking their first programming classes.  Edith is written primarily in JavaScript and is available over the internet.  The software is expected to be open-source to allow further development and additional educational opportunities. 
-
-The first step for the user of Edith is to create an account by entering a user name and password.  With the account, the user can save projects and come back to work on them later, or share projects with friends and classmates.   After an account is created (or a user logs in to an existing account), Edith also allows the user to either select an existing sprite, load a new sprite from a file, or create (draw) his own character within the program by selecting "Make Object."  Even new computer users will be able to make simple objects using the provided shapes and drawing methods.         
-
+Edith is educational software designed to introduce new computer science students to programming.  New students of any age can learn basic object-oriented programming concepts prior to learning a particular programming language in detail (syntax, data types and structures, etc.).  Edith provides a graphical user interface through which users can create a "script" that animates 2-D characters, or sprites, provided by the program or loaded or created by the user.  The user creates the script by piecing together provided blocks of program structure in a functional way.  Similar programs (e.g., Alice, Scratch) have been shown to increase the interest level and retention of students taking their first programming classes.  Edith is written primarily in JavaScript and is available over the internet.  The software is expected to be open-source to allow further development and additional educational opportunities.  \newline  \newline 
+The first step for the user of Edith is to create an account by entering a user name and password.  With the account, the user can save projects and come back to work on them later, or share projects with friends and classmates.   After an account is created (or a user logs in to an existing account), Edith also allows the user to either select an existing sprite, load a new sprite from a file, or create (draw) his own character within the program by selecting "Make Object."  Even new computer users will be able to make simple objects using the provided shapes and drawing methods.         \newline  \newline 
 The Visual Editor (VE) module provides a visual programming language editor (in essence, an integrated development environment(IDE)).  The user selects a sprite(s) to be added to the canvas and be animated, and the VE allows users to arrange programming elements to create an animation sequence.  VE programming elements are contained in three categories, accessed through one of three drop-down boxes.  The first category, "Method", allows the user to define methods and variables, and includes and end block for the program.  The second category, "Predefined", includes given methods that the user can easily apply to sprites (wait, rotate, move, jump, move right, move left, move up, move down).  The final category, "Control", provides if, while and else blocks for the user's animation.  The user creates the animation by selecting from the available VE blocks and dragging them to the right of a line to the code sequence area.  When a block is dragged to the code sequence area, the user will be prompted for appropriate inputs (e.g., variable names, or the distance for the sprite to move).  User inputs are checked for type; if a user enters a word rather than a number for distance moved, the user will be prompted again for a number.  Blocks can also be dragged from the code sequence area back to the main VE option area; this removes that section of code in real time. As the user is creating the block of code, the VE, while enforcing syntax rules, converts the program into JavaScript to be executed.  Upon creation of an animation sequence, the user will not need to  wait for compiling to see if the code "works". Rather, the code, or sequence of events defined by the user, will be always ready to run ("play") unless a script notifies the user otherwise.
 
 
@@ -43,27 +41,17 @@ The Visual Editor (VE) module provides a visual programming language editor (in 
 
 \section{Development Procedures}
 
-Incremental development (a fundamental part of agile approaches) was used to develop the Visual Editor module.  This general method of development made sense for the Edith project, as the team needed to move toward a solution in a series of incremental steps.  Given that the languages and technologies were new to the team members, it was the only option for development process.  The team did not know enough to plan everything at the beginning, and needed to build on successive iterations that added functionality and got closer to the objectives.  Not surprisingly, as the VE team began its work and planning on the project, which development procedure would be used was not a topic of discussion or debate.  It should be noted that with more software project experience, project management experience, and with the benefit of more time, additional early planning about how teams are going to go about a project could pay great dividends.    
-
-The VE team's development methodology could accurately be classified as Rapid Application Development ("RAD").  RAD was a natural fit for the VE portion of Edith, as prototypes needed to be developed quickly, with additional functionality and interaction with other modules added for each integration date in the project schedule.  One weakness of RAD and related methodologies is reliance on communal decision-making processes.  In Edith, there was ongoing confusion on the purpose and role boundaries between VE and other modules; this confusion was not resolved for many weeks.  Meanwhile, the VE team assigned some functionality to its team members, and excellent individual efforts produced various early prototypes.  One issue was that there were still different ideas about what the module should do, far beyond how it should be done, and it took a lot of time to get to the point where the team was building on the same prototype.  This may have been resolved with earlier team integration and collaboration as a mutual understanding and method of development were being formed.  However, once more advanced prototypes were being developed, it became easier to combine desirable elements of various prototypes.
-
-The order of component development is difficult to state precisely, as many components were being worked on concurrently.  In basic order: creation of blocks; adding text to blocks; cloning blocks; dragging and dropping blocks; getting user input when blocks are dropped; sorting based on the y positions of the boxes; user input verification.
-
-Testing was performed primarily by the VE team testing the software from the user's perspective.  This natural testing method was very effective and provided direction for program correction and feature improvement.  Static analysis was performed midway through development, but at that point it did not offer much insight, as the code did not have specific errors to be caught by static analysis, and the tools seemed to offer more style than substance feedback.
-
-Some of the contributions of VE team members follow:
-
-Graham Baker - made the sorting function that reads the y positions of the boxes, gets their ids, then puts them all in a string to give to animation. Also made the tabs and helped with save and load functions. Got all of the functions from animation and put them into boxes and made prompts to fill the attributes. 
-
-Walker Bohannen - was responsible for most of the functionality with the double-click, drag-start, drag-end methods. Also co-responsible for the saving and loading of JSON code so blocks can be put into the canvas again. Helped implement canceling of boxes, as well cloning when dragged over the line. Also helped implement the grouping of text and rectangle objects with auto-height and -width functionality.
-
-Steve Marx – added user input checks using regex so that variable names, method names, and predefined method inputs make/prompt user to enter the right type of data.  Worked on some JSON issues.  
-
-Vikram Nilakantan - was responsible for working on the block dynamic creation. AJAX server syncing (used by sharing framework, story creator, and object team) as well as loading and saving VE method blocks.
-
-Jessica Penick  - worked on commenting code, cloning and intergroup relations.
-
-Eli Spiegel – wrote a majority of first two integrations getting blocks that could drag and drop and being able to have user input as those blocks got dropped. Later in the project continued to work with Vikram, Graham, and Walker on the code but also moved to working more with other teams as to find how we could integrate with them. For one of the biggest pieces of integration worked with Eric Lund to get it so VE blocks could add sprite and actually animate them; helped him understand VE code and worked to help him find a solution for how VE blocks could call their methods with the objects Object Team had created.
+Incremental development (a fundamental part of agile approaches) was used to develop the Visual Editor module.  This general method of development made sense for the Edith project, as the team needed to move toward a solution in a series of incremental steps.  Given that the languages and technologies were new to the team members, it was the only option for development process.  The team did not know enough to plan everything at the beginning, and needed to build on successive iterations that added functionality and got closer to the objectives.  Not surprisingly, as the VE team began its work and planning on the project, which development procedure would be used was not a topic of discussion or debate.  It should be noted that with more software project experience, project management experience, and with the benefit of more time, additional early planning about how teams are going to go about a project could pay great dividends.    \newline  \newline 
+The VE team's development methodology could accurately be classified as Rapid Application Development ("RAD").  RAD was a natural fit for the VE portion of Edith, as prototypes needed to be developed quickly, with additional functionality and interaction with other modules added for each integration date in the project schedule.  One weakness of RAD and related methodologies is reliance on communal decision-making processes.  In Edith, there was ongoing confusion on the purpose and role boundaries between VE and other modules; this confusion was not resolved for many weeks.  Meanwhile, the VE team assigned some functionality to its team members, and excellent individual efforts produced various early prototypes.  One issue was that there were still different ideas about what the module should do, far beyond how it should be done, and it took a lot of time to get to the point where the team was building on the same prototype.  This may have been resolved with earlier team integration and collaboration as a mutual understanding and method of development were being formed.  However, once more advanced prototypes were being developed, it became easier to combine desirable elements of various prototypes. \newline  \newline 
+The order of component development is difficult to state precisely, as many components were being worked on concurrently.  In basic order: creation of blocks; adding text to blocks; cloning blocks; dragging and dropping blocks; getting user input when blocks are dropped; sorting based on the y positions of the boxes; user input verification. \newline  \newline 
+Testing was performed primarily by the VE team testing the software from the user's perspective.  This natural testing method was very effective and provided direction for program correction and feature improvement.  Static analysis was performed midway through development, but at that point it did not offer much insight, as the code did not have specific errors to be caught by static analysis, and the tools seemed to offer more style than substance feedback.\newline \newline 
+Some of the contributions of VE team members include: \newline \newline 
+Graham Baker - made the sorting function that reads the y positions of the boxes, gets their ids, then puts them all in a string to give to animation. Also made the tabs and helped with save and load functions. Got all of the functions from animation and put them into boxes and made prompts to fill the attributes. \newline \newline 
+Walker Bohannen - was responsible for most of the functionality with the double-click, drag-start, drag-end methods. Also co-responsible for the saving and loading of JSON code so blocks can be put into the canvas again. Helped implement canceling of boxes, as well cloning when dragged over the line. Also helped implement the grouping of text and rectangle objects with auto-height and -width functionality. \newline \newline 
+Steve Marx – added user input checks using regex so that variable names, method names, and predefined method inputs make/prompt user to enter the right type of data.  Worked on some JSON issues.  \newline \newline 
+Vikram Nilakantan - was responsible for working on the block dynamic creation. AJAX server syncing (used by sharing framework, story creator, and object team) as well as loading and saving VE method blocks.\newline \newline 
+Jessica Penick  - worked on commenting code, cloning and intergroup relations.\newline \newline 
+Eli Spiegel – wrote a majority of first two integrations getting blocks that could drag and drop and being able to have user input as those blocks got dropped. Later in the project continued to work with Vikram, Graham, and Walker on the code but also moved to working more with other teams as to find how we could integrate with them. For one of the biggest pieces of integration worked with Eric Lund to get it so VE blocks could add sprite and actually animate them; helped him understand VE code and worked to help him find a solution for how VE blocks could call their methods with the objects Object Team had created.\newline \newline 
 
 
 
@@ -74,14 +62,23 @@ Eli Spiegel – wrote a majority of first two integrations getting blocks that c
 
 \section{Requirements Evaluation}
 
+Non-Functional Requirements and their Status: \newline \newline 
+1) Usability.  (Training should not be required for users to effectively use the module.  
+Module documentation and basic age-specific computer knowledge should provide sufficient guidance.
+The module should allow the user to recover from errors with informative and understandable error messages.) Partially met - Training is not required, but documentation should be improved to facilitate module use.  Input error messages allow users to recover from some errors, but more help, tips and code issue checking would improve usability.  \newline \newline 
+2) Documentation. (The module will provide documentation that allows users to easily begin using the system.) Partially met - At this point, it does not seem that users can "easily" begin using Edith.  More extensive instruction should be provided on how to get started, drag and drop blocks, etc.  \newline \newline 
+3) Modifiability.  (The module will have the flexibility to allow feature expansion over time.) Met - Additional predefined methods, math, etc. can be easily added. \newline \newline 
+4) Privacy.  (The user's work will remain private/secure unless the user chooses to share it.) Met - The Edith site is secure and requires a username and password to access work. \newline \newline 
+5) Student Learning Experience.  (In order to support the learning of young computing students, the module will provide an engaging interest that increases their interest in the subject.  Effectiveness may be measured by student retention rates and self-reported interest levels.) Met - the module provides the basic template to facilitate student's understanding of code structure and its effects.  Additional options and refinement could further increase interest. \newline \newline 
+6) Platform.  (Users will be able to run the module from Windows or Mac.)  Met - All of Edith can be accessed from Windows or Mac computers.  \newline \newline 
+7) Open Source.  (After initial development, the source code will be open and redistributed with improvements by anyone.) Not Met - The class is not yet at that point, as the final integration was just yesterday.  Student interest will help determine whether the project is made open source. \newline \newline 
+
 
 
 \section{System Design and Architecture}
 \subsection{Code Walkthrough}
-Our code starts with some global declarations, including universal main which is passed to story creator. Universal main is the string of method calls that the end-user has written.  The code then defines some regular expressions that check the input from the users to ensure they are the correct data type. There is some code that animation team added that keeps track of which sprites are currently on the canvas. The array called "tools" contains each of the available methods which come in three types: "method," "predefined," and "control" (defined later). The next major part is a function called "promptUser". This method has two more methods inside it—-"loadUpSpritesToAnimate" and "loadSprites", both of which make sure we have a sprite selected from the object box beneath the story canvas. Then there is a series of if statements that check what kind of method has been dragged and prompt for the appropriate arguments. The regular expressions from earlier check that these inputs are the proper types. At the end of promptUser we return a string of the JavaScript block that has been dragged over.\\
-
-The next big one is "newRect" which makes the draggable boxes seen in the editor. The color of the box is based on what kind of box it is (control, method, etc). "Predefined" boxes are method calls received from animation team; "control" boxes are statements like if, else, and while; and all other boxes ("method" boxes) are default methods (main, etc). The method newRect then sets up the text to display on the box, followed by defining the behaviors of the box on dragstart, double click, and dragend. On dragstart the box is moved across the canvas following the cursor. If the box has not been dragged across the threshold line (created later) before, it's cloned, if it doesn't cross the threshold line, the box gets deleted. Double click only applies to boxes that have been defined as "sortable" (which happens when the box is cloned, since this means it is a box the user has created). Once defined "sortable", we prompt the user, update the text and the size of the box based on the text, allowing users to change their previously generated method calls. Behavior on dragend does a lot of the same things: set the position, check if it has been dropped across the line, if it has been we prompt for parameters again, elsewise the box is deleted. We once again use the "sort" method and set it so that it knows that it has been cloned.\\
-
+Our code starts with some global declarations, including universal main which is passed to story creator. Universal main is the string of method calls that the end-user has written.  The code then defines some regular expressions that check the input from the users to ensure they are the correct data type. There is some code that animation team added that keeps track of which sprites are currently on the canvas. The array called "tools" contains each of the available methods which come in three types: "method," "predefined," and "control" (defined later). The next major part is a function called "promptUser". This method has two more methods inside it—-"loadUpSpritesToAnimate" and "loadSprites", both of which make sure we have a sprite selected from the object box beneath the story canvas. Then there is a series of if statements that check what kind of method has been dragged and prompt for the appropriate arguments. The regular expressions from earlier check that these inputs are the proper types. At the end of promptUser we return a string of the JavaScript block that has been dragged over. \newline \newline 
+The next big one is "newRect" which makes the draggable boxes seen in the editor. The color of the box is based on what kind of box it is (control, method, etc). "Predefined" boxes are method calls received from animation team; "control" boxes are statements like if, else, and while; and all other boxes ("method" boxes) are default methods (main, etc). The method newRect then sets up the text to display on the box, followed by defining the behaviors of the box on dragstart, double click, and dragend. On dragstart the box is moved across the canvas following the cursor. If the box has not been dragged across the threshold line (created later) before, it's cloned, if it doesn't cross the threshold line, the box gets deleted. Double click only applies to boxes that have been defined as "sortable" (which happens when the box is cloned, since this means it is a box the user has created). Once defined "sortable", we prompt the user, update the text and the size of the box based on the text, allowing users to change their previously generated method calls. Behavior on dragend does a lot of the same things: set the position, check if it has been dropped across the line, if it has been we prompt for parameters again, elsewise the box is deleted. We once again use the "sort" method and set it so that it knows that it has been cloned.\newline \newline 
 The next important section prepares the stage and the threshold line, which acts as a visual marker for the division between the "staging area" where the boxes are kept, and the "working area" where the user builds their code. A little lower, the function "newTab" draws the tabs in the staging area. The tabs have their own text and rectangle definitions. On switching tabs, the function basically destroys everything that's been drawn beneath them and draws new boxes. 
 Beneath all the tab code, there is a method called "cleanup" that converts the array of method calls from the user into a JSON string. Below that, the method "loadBlocks" checks through the array we've been keeping everything in (stored as a JSON object), parses it back into an array, and draws the boxes in that array. The last big part of the code is "sortable", which is in its own file. The mainly it has the method "sorter" go through the staging area (the right-hand side) of the canvas checking y-coordinates of the boxes and then adds them to an array in that order. The method beneath it, "lookUp" adds the array to the string universal main, which is later passed to animation.
 
@@ -132,14 +129,14 @@ There was a lot to take away from this class, too. Chiefly process models, testi
 If we were to start over, I would do a few things differently: 1) I'd choose a group I could be more helpful in, 2) I would be more involved in the coding process, or, barring that, I'd have taken more of a stand on the organization of the code/communication within and without the group. There is more to do than coding in a development team, so I would have operated in a position of administration rather than facilitation. If we were to continue developing the code, I would work to optimize it for efficiency—-maybe make it more easily maintainable. That includes documenting it thoroughly, observing the interfacing between modules and seeing how them may be improved by the reallocation of responsibilities, or standardization of the information being passed around. Mostly re-imagine it as a project conceived as a single idea from the top down (or more likely, the bottom up). Also, over time, add more features, clean up/unify the interface, and generally expand it (maybe a message board to discuss created stories, or the ability to annotate them? Possibilities are endless).
 
 \section{Reflection: Eli Spiegel}
-\subsubsection{Technical and organizational Challenges}
+\subsection{Technical and organizational Challenges}
 The project started trying to use the waterfall method, however as it progressed the lack of direction made the waterfall method challenging. This led to our team and a few others moving to a more agile approach. Agile helped us get a product that worked in a shorter amount of time as we were able to progress and find different problems instead of spending all of our time planning and then quickly finding new issues. Other issues included communication between people with diverse schedules, and working with tools and languages I was unfamiliar with, mostly JavaScript and GitHub.
 
 \subsection{Starting this Project Over}
 I think writing requirements as a class with Joel as the "client" could have made for a better use of the waterfall method as everyone would have a better understanding of the overall project, which would help with moving forward on the individual modules and solve division of labor/dependency issues. Another issue the project had was a lack of experience with the languages/tools groups would be using took the focus off of the software engineering problems and made them more implementation problems. I believe that a stronger focus on learning the tools and languages at the start of a project will make it clear what problems may arise and possible ways to solve them. 
 
 \subsection{Learning}
-In the end some of the more valuable things I learned were how to write code as a group, and how to use tools such as GitHub. I also learned that knowledge is the most important tool in software development.  If a group comes in knowledgeable about the tools and about what the goal is that they will build even complex projects in fairly short about of time.
+In the end some of the more valuable things I learned were how to write code as a group, and how to use tools such as GitHub. I also learned that knowledge is the most important tool in software development.  If a group comes in knowledgeable about the tools and about what the goal is that they will build even complex projects in a fairly short amount of time.
 
 \section{Reflection: Walker Bohannan}
 \subsection{Challenges}
