Added glossary and references

--- a/docs/Visual Editor Final Report/ve_final_report.tex
+++ b/docs/Visual Editor Final Report/ve_final_report.tex
@@ -72,6 +72,7 @@ The module should allow the user to recover from errors with informative and und
 5) Student Learning Experience.  (In order to support the learning of young computing students, the module will provide an engaging interest that increases their interest in the subject.  Effectiveness may be measured by student retention rates and self-reported interest levels.) Met - the module provides the basic template to facilitate student's understanding of code structure and its effects.  Additional options and refinement could further increase interest. \newline \newline 
 6) Platform.  (Users will be able to run the module from Windows or Mac.)  Met - All of Edith can be accessed from Windows or Mac computers.  \newline \newline 
 7) Open Source.  (After initial development, the source code will be open and redistributed with improvements by anyone.) Not Met - The class is not yet at that point, as the final integration was just yesterday.  Student interest will help determine whether the project is made open source. \newline \newline 
+Overall, Usability, Documentation and Student Learning Experience were the most helpful non-functional requirements, as meeting these requirements together means that the project is a basic success.  In other words, if aspiring programmers can understand how to use the system and have a good learning experience, the goal has been achieved.  
 
 
 
@@ -162,6 +163,21 @@ In the end some of the more valuable things I learned were how to write code as 
 	
 	\subsection{Different Approach}
 	It is easy to look back and come to the conclusion that you could have done things differently, but is it a useful exercise?  I think it is.  In my last corporate position, all company divisions were transitioning to a new way of financial reporting.  Each quarter, the managers of each division gathered for a "post-mortem" to review what went wrong (and right) with the project that quarter.  It was a great chance to share issues with upper management and learn from the successes and challenges of other groups, too.  On the Edith project, I would have devoted much more energy in the beginning to ensuring that teams understood their roles in every respect - generally; specifically; the interactions with other modules and teams, etc.  In the early weeks, it would have been helpful to spend days at the chalkboard with the whole class present, diagramming out exactly who was doing what - sketches of module appearances, and clear discussion of where one team's module would end and the next team's would begin (including discussion of what would need to be passed from team to team).  Confusion over these issues hindered our progress nearly throughout the project and resulted in new roles and confusion essentially through completion.  There were many discussions of roles, but they were in the form of conversations between individuals (while many assumptions were made by all the groups - "I think Team X is doing that") and communication was not formalized and widely distributed. If we were to continue developing the Visual Editor module, we would have some more time to focus on the user's learning experience.  For example, help boxes and coding tips (e.g., how to use if statements) would be provided for the user.  In addition, blocks could be shaped to fit together in logical (allowed) ways for programming, similar to the blocks of Scratch.  
+	
+	
+	\section{Glossary and References}
+	
+	Alice - educational software that teaches students programming in a 3D environment. http://www.alice.org/index.php \newline \newline
+	Git -  a distributed revision control and source code management (SCM) system with an emphasis on speed. \newline \newline
+	HTML5 - a markup language used for structuring and presenting content for the World Wide Web. \newline \newline
+	IDE - Integrated Development Environment - software application used for software development \newline \newline
+	jQuery - fast, small JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.  jQuery.com  \newline \newline
+	JSON - JavaScript Object Notation. A lightweight data-interchange format. \newline \newline
+	KineticJS -  HTML5 Canvas JavaScript framework that enables high performance animations, transitions, node nesting, layering, etc.  http://kineticjs.com/ \newline \newline
+	RAD - Rapid Application Development.  Software development methodology that uses minimal planning and extensive prototype development.  \newline \newline
+	regex - Regular Expression.  Sequence of characters that forms a search pattern, mainly for use in pattern matching (Edith uses to verify proper user input) \newline \newline
+	Scratch - educational software that teaches students programming in a 2D environment http://scratch.mit.edu/ \newline \newline
+	Sprite - 2-dimensional image or animation (a character) \newline \newline
 	        
 
 
